--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # 示例与解释见 .env.example
 
 # `LOG_CHAT`: 是否记录日志
-LOG_CHAT=false
+LOG_CHAT=true
 
 PRINT_CHAT=false
 
@@ -12,7 +12,7 @@ OPENAI_BASE_URL=https://api.openai.com
 # `OPENAI_ROUTE_PREFIX`: 可指定所有openai风格(为记录日志)服务的转发路由前缀
 OPENAI_ROUTE_PREFIX=
 
-OPENAI_API_KEY=
+OPENAI_API_KEY= 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
 FORWARD_KEY=
 
 # `EXTRA_BASE_URL`: 可指定任意服务转发
